revised file structure for lib

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,4 +1,4 @@
-{{ if in .Layout "lib-" }}
+{{ if eq .Type "lib" }}
   {{ partial "summary/lib-item" . }}  
 {{ else }}
   {{ partial "summary/classic" . }}
