--- a/layouts/lib/data-type.html
+++ b/layouts/lib/data-type.html
@@ -7,14 +7,17 @@
 
           {{ partial "body/breadcrumb" . }}
 
-          {{/* read the YAML data from the parent's resources */}}
-          {{ $yamlData := partial "lib/get-yaml-data" ( dict "ctx" $ "fileName" .Page.File.BaseFileName ) }}
+          {{/* read the YAML data from the page resources */}}
+          {{ $yamlData := partial "lib/get-yaml-data" ( dict "ctx" $ "fileName" "definition" ) }}
 
           <header>
             <div class="flex justify-start items-baseline flex-wrap mb-2">
               <h1 class="low-profile-header mr-2 py-0" id="{{ .Title }}">{{ .Title }}</h1>
               {{ partial "lib/latest-version" $yamlData }}
             </div>
+            {{ if .Params.featuredImage }}
+              {{ partial "body/featured-image" . }}
+            {{ end }}            
           </header>
 
           <div class="mb-8 flex flex-col items-start sm:flex-row sm:items-center sm:flex-wrap sm:flex-grow">
@@ -62,7 +65,7 @@
               {{ with $yamlData.var }}
                 <section>
                   <h2 id="overview">Overview</h2>
-                  {{ partial "lib/function/var-table.html" (dict "ctx" $ "var" . ) }}
+                  {{ partial "lib/type/var-table.html" (dict "ctx" $ "var" . ) }}
                 </section>
               {{ end }}
             {{ end }}
@@ -71,28 +74,16 @@
             {{ with $yamlData.var }}
               <section>
                 <h2 id="details">Details</h2>
-                {{ partial "lib/function/var-details.html" (dict "ctx" $ "var" . ) }}
+                {{ partial "lib/type/var-details.html" (dict "ctx" $ "var" . ) }}
               </section>
             {{ end }}
-
 
             {{/* source code */}}
             {{ if (and (not .Params.disable_source) (or (hugo.Environment | eq "development") (.Params.open_source)) ) }}
               {{ with $yamlData }}
                 <section>
                   <h2 id="source-code">Source code</h2>
-                  {{ partial "lib/function/source-code.html" (dict "ctx" $ "item" . ) }}
-                </section>
-              {{ end }}
-            {{ end }}
-
-
-            {{/* implementation snippet */}}
-            {{ if not .Params.disable_snippet }}
-              {{ with $yamlData }}
-                <section>
-                  <h2 id="implementation">Implementation</h2>
-                  {{ partial "lib/function/snippet.html" (dict "ctx" $ "item" . ) }}
+                  {{ partial "lib/type/source-code.html" (dict "ctx" $ "item" . ) }}
                 </section>
               {{ end }}
             {{ end }}
