--- a/layouts/lib/overview.html
+++ b/layouts/lib/overview.html
@@ -7,8 +7,8 @@
 
           {{ partial "body/breadcrumb" . }}
 
-          {{/* read the YAML data from the parent's resources */}}
-          {{ $yamlData := partial "lib/get-yaml-data" ( dict "ctx" $ "fileName" "project" ) }}
+          {{/* read the YAML data from the page resources */}}
+          {{ $yamlData := partial "lib/get-yaml-data" ( dict "ctx" $ "fileName" "definition" ) }}
 
           <header>
             <div class="flex justify-start items-baseline flex-wrap">
