--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -71,7 +71,7 @@ html:not(.dark) {
  * ========================================================================= */
 
 kbd {
-  @apply inline-block px-1 mx-1 bg-background-soft text-default rounded border shadow-sm font-mono;
+  @apply inline-block px-1 mx-1 bg-background-soft text-default rounded border-2 border-default-light shadow-inner font-mono tracking-wider uppercase;
 }
 
 
