use original key name

--- a/layouts/partials/lib/prerequisite-table.html
+++ b/layouts/partials/lib/prerequisite-table.html
@@ -10,7 +10,7 @@
     <tbody>
       {{ range $key, $value := . }}
         <tr>
-          <td>{{ with $key }}{{ humanize . | markdownify }}{{ end }}</td>
+          <td>{{ with $key }}{{ . | markdownify }}{{ end }}</td>
           <td>{{ with $value }}{{ . | markdownify }}{{ end }}</td>
         </tr>
       {{ end }}
