fixes for new file structure

--- a/layouts/partials/lib/function/snippet.html
+++ b/layouts/partials/lib/function/snippet.html
@@ -1,7 +1,7 @@
 {{/* generate snippet */}}
 {{ with .item }}
   <div class="">
-    {{ $name := $.ctx.Page.File.BaseFileName }}
+    {{ $name := $.ctx.Page.Title }}
     {{ $isFB := not .return }}
     {{ $dummy := "dummy" }}
     {{ $vars := slice }}
