--- a/layouts/lib/common-data.html
+++ b/layouts/lib/common-data.html
@@ -8,7 +8,7 @@
           {{ partial "body/breadcrumb" . }}
 
           {{/* read the YAML data from the page resources */}}
-          {{ $yamlData := partial "lib/get-yaml-data" ( dict "ctx" $ "fileName" "definition" ) }}
+          {{ $yamlData := partial "lib/get-yaml-data" ( dict "ctx" $.Parent "fileName" "_common" ) }}
 
           <header>
             <div class="flex justify-start items-baseline flex-wrap mb-2">
