fix headers of var details (#1)

--- a/layouts/partials/lib/common-data/var-details.html
+++ b/layouts/partials/lib/common-data/var-details.html
@@ -4,11 +4,11 @@
 {{ $collapseId := printf "%s-toggle" ($name | anchorize )}}
 
 <div class="collapse-card border rounded mb-4">        
-  <a class="" data-toggle="collapse" title="toggle details" href="#{{ $collapseId }}">
-    <div class="pl-4 bg-default-soft ">
-      <h3 class="inline-block flat" id="{{ $name | urlize }}">{{ $name }}</h3>
-      {{ with $data.type }}<span class="inline-block ml-2 text-brand font-mono">{{ .}} </span>{{ end }}
-      <div class="inline-block ml-2 text-default-light italic">
+  <a class="low-profile-link" data-toggle="collapse" title="toggle details" href="#{{ $collapseId }}">
+    <div class="pl-4 bg-default-soft flex items-baseline">
+      <h3 class="low-profile-header" id="{{ $name | urlize }}">{{ $name }}</h3>
+      {{ with $data.type }}<span class="ml-2 text-brand font-mono">{{ .}} </span>{{ end }}
+      <div class="ml-2 text-default-light italic">
         {{ with (and ($data.optional) ($data.default_value)) }}
           {{ with $data.default_value }}<span>(optional, default: {{ . }})</span>{{ end }}
         {{ else }}
