--- a/layouts/partials/lib/function/var-details.html
+++ b/layouts/partials/lib/function/var-details.html
@@ -14,10 +14,12 @@
           {{ $data = partial "lib/read-var-data.html" (dict "ctx" $.ctx "var" . "name" .name ) }}
 
           <div class="pl-4 bg-default-soft flex items-baseline">
-            <h3 class="low-profile-header" id="{{ $data.id | urlize }}">{{ $data.name }}</h3>
-            {{ with $data.type }}<span class="ml-2 text-brand font-mono">{{ .}} </span>{{ end }}
-            {{/* todo: create hyperlinks for non-basic types*/}}
-            {{/* "optional" and "default value" between the same pair of brackets  */}}
+            <h3 class="low-profile-header" id="{{ $data.name | urlize }}">{{ $data.name }}</h3>
+            {{ with $data.type }}
+              <span class="ml-2">
+                {{ partial "lib/ref-lib-item.html" (dict "ctx" $.ctx.FirstSection "item" . ) }}
+              </span>
+            {{ end }}
             <div class="ml-2 text-default-light italic">
               {{ with (and ($data.optional) ($data.default_value)) }}
                 {{ with $data.default_value }}<span>(optional, default: {{ . }})</span>{{ end }}
