--- a/layouts/partials/lib/function/var-table.html
+++ b/layouts/partials/lib/function/var-table.html
@@ -13,21 +13,23 @@
       </thead>
       <tbody>
         {{ $kind := "" }}
-          {{ range  . }}    
+          {{ range  . }}
             {{ with .kind}}{{ $kind = . }}{{ end }}
-            
+
             {{ with .var }}
-              {{ range  . }}    
+              {{ range  . }}
                 {{ if (or (eq $kind "input") (eq $kind "output") (eq $kind "in_out") ($.ctx.Params.show_all_vars)) }}
 
                 {{/* get the var data */}}
                 {{ $data := dict }}
                 {{ $data = partial "lib/read-var-data.html" (dict "ctx" $.ctx "var" . "name" .name ) }}
-
                 <tr class="">
                   <td>{{ $kind }}</td>{{/* todo: only icons in this column */}}
-                  <td>{{ with $data.name }}<a class="" href="#{{ $data.id | urlize }}">{{ . }}</a>{{ end }}</td>
-                  <td>{{ with $data.type }} {{ . }}{{ end }}</td>
+                  <td>{{ with $data.name }}<a class="" href="#{{ $data.name | urlize }}">{{ . }}</a>{{ end }}</td>
+                  <td>{{ with $data.type }}
+                        {{ partial "lib/ref-lib-item.html" (dict "ctx" $.ctx.FirstSection "item" . ) }}
+                      {{ end }}
+                  </td>
                   <td>{{ with $data.default_value}}{{ . }}{{ end }}</td>
                   <td class="">{{ with $data.comment}} {{ . }} {{ end }}</td>
                 </tr>
