--- a/layouts/partials/lib/ref-lib-item.html
+++ b/layouts/partials/lib/ref-lib-item.html
@@ -4,21 +4,38 @@
 {{ $result := "" }}
 {{ $url := "" }}
 
-{{ $libItem := split $item " " }}
+{{ $libItem := split $item "OF " }}
+{{ if eq (len $libItem) 1 }}
+  {{ $libItem = split $item "TO " }}
+{{ end }}
+
 {{ $libItem = (index $libItem (sub (len $libItem) 1 )) }}
-{{ $prefix := strings.TrimRight $libItem $item }}
+{{ $prefix := strings.TrimSuffix $libItem $item}}
+
+{{ $anchor := findRE "#.*" $libItem }}
+{{ if $anchor }}
+  {{ $anchor = index $anchor 0 }}
+  {{ $libItem = strings.TrimSuffix $anchor $libItem}}
+  {{ $anchor = $anchor | urlize  }}
+{{ end }}
 
 {{ range where $ctx.RegularPagesRecursive "Title" $libItem }}
   {{ $url = .Permalink }}
 {{ end }}
 
-{{ with $url }}
-  {{ $result = printf "[%s](%s)" $libItem $url }}
+
+{{ if $url }}
+  {{ if $anchor }}
+    {{ $url = printf "%s%s" $url $anchor}}
+  {{ end }}
+  {{ $result = printf "[`%s`](%s)" $libItem $url }}
   {{ with $prefix }}
-    {{ $result = printf "%s%s" $prefix $result }}
+    {{ $result = printf "`%s`%s" $prefix $result }}
   {{ end }}
 {{ else }}
-    {{ $result = printf "%s" $item }}
+  {{ with $item }}
+    {{ $result = printf "`%s`" . }}
+  {{ end }}
 {{ end }}
 {{ $result = $result | markdownify }}
 
