use named parametes + optional `source` for markdown snippets

--- a/layouts/shortcodes/snippet.html
+++ b/layouts/shortcodes/snippet.html
@@ -1,14 +1,21 @@
-{{ $file := .Get 0 }}
+{{ $file := .Get "file" }}
+{{ $asSourceCode := .Get "source" }}
 {{ $path := .Site.GetPage "snippets" }}
 {{ $snippets := $path.Resources.Match $file }}
 {{ range $snippets }}
   {{ $ext := path.Ext .Name | strings.TrimLeft "." }}
-  {{ $content := .Content }}
   {{ if eq $ext "md" }}
-    {{ $content | safeHTML }}
+    {{ if not $asSourceCode }}
+      {{ .Content | safeHTML }}
+    {{ else }}
+      {{ $str := printf "```%s\n" $ext }}
+      {{ $str = printf "%s%s\n" $str .RawContent }}
+      {{ $str = printf "%s```\n" $str }}
+      {{ $str | markdownify }}
+    {{ end }}
   {{ else }}
     {{ $str := printf "```%s\n" $ext }}
-    {{ $str = printf "%s%s\n" $str $content }}
+    {{ $str = printf "%s%s\n" $str .Content }}
     {{ $str = printf "%s```\n" $str }}
     {{ $str | chomp | markdownify }}
   {{ end }}
