--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,27 +4,30 @@
     <section class="md:ml-80 xl:ml-96">
       <div class="pt-16 md:mx-auto px-4 lg:px-20 xl:px-20 min-h-full prose prose-sm md:prose max-w-none lg:max-w-3xl xl:max-w-4xl print:py-0 print:px-0 print:max-w-none print:prose">
         <main class="min-h-screen">
-        
-          {{ partial "body/breadcrumb" . }}
+
+          <div class="flex justify-between">
+            {{ partial "body/breadcrumb" . }}
+            {{ partial "body/page-buttons.html" . }}
+          </div>
 
           <header>
             <h1>{{ .Title }}</h1>
             {{ if .Params.featuredImage }}
               {{ partial "body/featured-image" . }}
             {{ end }}
-          </header>          
+          </header>
 
           <article>
             {{ .Content }}
           </article>
 
           <div class="flex flex-wrap">
-            {{ range .Pages }}            
+            {{ range .Pages }}
               {{ .Render "summary" }}
             {{ end }}
           </div>
 
-          {{ partial "footer/page-footer.html" . }}          
+          {{ partial "footer/page-footer.html" . }}
 
         </main>
       </div>
