also add ` rel="noopener"` for external links

--- a/layouts/_default/_markup/render-link.html
+++ b/layouts/_default/_markup/render-link.html
@@ -1,5 +1,5 @@
 {{ if strings.HasPrefix .Destination "http" }}
-  <a href="{{ .Destination | relURL }}"{{ with .Title}} title="{{ . }}"{{ end }} target="_blank">
+  <a href="{{ .Destination | relURL }}"{{ with .Title}} title="{{ . }}"{{ end }} target="_blank" rel="noopener">
     {{ .Text | safeHTML }}
   </a>
 {{ else }}
