--- a/layouts/partials/footer/page-footer.html
+++ b/layouts/partials/footer/page-footer.html
@@ -1,3 +1,3 @@
 <footer class="text-center border-t p-4 text-xs text-default-light">
-  <p class="">{{ now.Format "02 Jan 2006 15:04" }} <span class="italic"> - built with <a class="low-profile-link" href="https://gohugo.io" target="_blank">Hugo</a> and the <a class="low-profile-link" href="https://github.com/mrBrutus/hugo-plc-docs-theme" target="_blank">PLC docs theme</a></span></p>
+  <p class="">{{ now.Format "02 Jan 2006 15:04" }} <span class="italic"> - built with <a class="low-profile-link" href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a> and the <a class="low-profile-link" href="https://github.com/mrBrutus/hugo-plc-docs-theme" target="_blank" rel="noopener">PLC docs theme</a></span></p>
 </footer>
