--- a/layouts/_default/_markup/render-link.html
+++ b/layouts/_default/_markup/render-link.html
@@ -1,9 +1,9 @@
 {{ if strings.HasPrefix .Destination "http" }}
-  <a href="{{ .Destination | relURL }}"{{ with .Title}} title="{{ . }}"{{ end }} target="_blank" rel="noopener">
+  <a href="{{ .Destination | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }} target="_blank" rel="noopener">
     {{ .Text | safeHTML }}
   </a>
 {{ else }}
-  <a href="{{ .Destination | relURL }}"{{ with .Title}} title="{{ . }}"{{ end }}>
+  <a href="{{ .Destination | safeURL }}"{{ with .Title}} title="{{ . }}"{{ end }}>
     {{ .Text | safeHTML }}
   </a>
 {{ end }}
