--- a/layouts/partials/nav/sidebar/main.html
+++ b/layouts/partials/nav/sidebar/main.html
@@ -1,7 +1,7 @@
 {{/* overlay for mobile menu */}}
 <div id="overlay" class="fixed inset-0 top-16 z-20 bg-black opacity-0 invisible cursor-pointer transition-all duration-300 print:hidden"></div>
 
-<aside id="sidebar" class="pb-16 bg-background fixed overflow-auto overflow-x-hidden z-30 overflow-y-scroll border-t md:border-none top-16 bottom-0 left-0 w-5/6 md:w-80 xl:w-96 transition-all duration-300 transform -translate-x-full md:translate-x-0 print:hidden">
+<aside id="sidebar" class="pb-16 bg-background fixed overflow-auto overflow-x-hidden z-30 overflow-y-scroll border-t md:border-none top-16 bottom-0 md:bottom-12 left-0 w-5/6 md:w-80 xl:w-96 transition-all duration-300 transform -translate-x-full md:translate-x-0 print:hidden">
 
   <div class="pt-16">
     {{/* sidebar always build from the root level */}}
